Remove duplicate HTML structure from index.html
Removed duplicate HTML structure and cleaned up formatting.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="nav-container">
-                <img src="https://drive.google.com/uc?export=view&id=1RTKXIk5vU3XeCBahFubl7KBepPcU_Jnr" alt="Logo" class="logo">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiShQlfLnw_X8SseaM9_zRrmJiT2_tByhTnmTLCH_5YwqaYg8HQbRLrFwMt58xJSbJ-FzoiWfYQeMkUlSSwNzKLT6bPv9v4ixoSbqPx43F54d6aT5ddV3upqGbe_W5M3hjTJU_AoMjloSP-POZUr9RZJp9ZC2fdlf7E6IxO1TwXbNQwCsp5jSplHdf3xGg/s1857/%D8%B5%D9%88%D8%B1-%D8%AD%D9%84%D9%88%D8%A9%20(1).jpg="Logo" class="logo">
                 <h1>مكتب الخدمات العامة</h1>
                 <ul id="nav-menu">
                     <li><a href="#home">الرئيسية</a></li>
@@ -117,3 +117,4 @@
     </footer>
 </body>
 </html>
+
