Refactor index.html with new images and content
Updated images and added new content in the HTML structure.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav>
             <div class="nav-container">
-                <img src="https://drive.google.com/uc?export=view&id=1RTKXIk5vU3XeCBahFubl7KBepPcU_Jnr" alt="Logo" class="logo">
+                <img src="logo.jpg" alt="Logo" class="logo">
                 <h1>مكتب الخدمات العامة</h1>
                 <ul id="nav-menu">
                     <li><a href="#home">الرئيسية</a></li>
@@ -48,17 +48,17 @@
         <div class="hero-content">
             <h1>⚡ مرحبًا بكم في مكتبنا<br> للخدمات العامة والتعقيب ⚡</h1>
             <h2>وجهتكم الأولى لإنجاز معاملاتكم الحكومية بكل سهولة وسرعة ✨</h2>
-            <p>نحن نوفر حلول متكاملة للأفراد والشركات، ونلتزم بالدقة والموثوقية وتسليم المعاملات في الوقت المحدد. نسعى لأن نكون الخيار الأول في مجال الخدمات العامة، من خلال تقديم خدمات احترافية تعتمد على الجودة والشفافية وتحقيق رضا العميل.</p>
-            <a href="https://wa.me/966591995710" class="cta-button">احجز الآن</a>
+            <p>نحن نوفر حلول متكاملة للأفراد والشركات، ونلتزم بالدقة والموثوقية وتسليم المعاملات في الوقت المحدد. نسعى لأن نكون الخيار الأول في مجال الخدمات العامة، من خلال تقديم خدمات احترافية تعتمد على الجودة والشفافية وتحقيق رضا العميل. 📋</p>
+            <a href="https://wa.me/966591995710" class="cta-button">احجز الآن 📞</a>
         </div>
-        <img src="https://drive.google.com/uc?export=view&id=1g3kRXcjZ0fuxaeklxftqAC7pH1gJXdfp" alt="صورة مهنية للمكتب">
+        <img src="hero_image.jpg" alt="صورة مهنية للمكتب">
     </section>
 
     <section id="about" class="about">
         <div class="about-content">
             <p>نسهل إجراءاتكم، ونوفّر الوقت والجهد عبر متابعة جميع المعاملات الحكومية والإنهاءات الرسمية بطريقة نظامية وموثوقة.</p>
         </div>
-        <img src="https://drive.google.com/uc?export=view&id=1I5ZQWRElOEUCWFpT7lR2va2eJow-QraR" alt="صورة عن الفريق">
+        <img src="about_team.jpg" alt="صورة عن الفريق">
     </section>
 
     <section id="services" class="services">
@@ -72,7 +72,7 @@
                 <li>🔐 خدمات منصة أبشر</li>
                 <li>📃 الاستعلام وإنهاء المعاملات اليومية</li>
             </ul>
-            <img src="https://drive.google.com/uc?export=view&id=1Qo6Pex_drr04GUX4uzxpi0HM7Q2PqvuU" alt="خدمات الأفراد">
+            <img src="services_individuals.jpg" alt="خدمات الأفراد">
         </div>
         <div class="service-category">
             <h3>الشركات / المؤسسات 🏢</h3>
@@ -83,7 +83,7 @@
                 <li>🏙️ إصدار تراخيص البلديات</li>
                 <li>📨 استخراج الخطابات والتفويضات الرسمية</li>
             </ul>
-            <img src="https://drive.google.com/uc?export=view&id=1XVHV8XRIH2oaZC4EuF9FG9NicvsJznFw" alt="خدمات الشركات">
+            <img src="services_companies.jpg" alt="خدمات الشركات">
         </div>
         <div class="service-category">
             <h3>الخدمات الإدارية / التعقيب 🏛️</h3>
@@ -93,7 +93,7 @@
                 <li>🖋️ توثيق الأوراق والمعاملات</li>
                 <li>⚙️ إنهاء المعاملات المتعثرة</li>
             </ul>
-            <img src="https://drive.google.com/uc?export=view&id=1IXYaPWRz6ZTp1zoDPLTHDZ5UrWjGrdMV" alt="الخدمات الإدارية">
+            <img src="services_administrative.jpg" alt="الخدمات الإدارية">
         </div>
     </section>
 
@@ -110,10 +110,10 @@
 
     <section id="contact" class="contact">
         <div class="contact-content">
-            <p>نستقبل استفساراتكم على مدار الساعة، ونسعد بخدمتكم وإنجاز معاملاتكم بكل احترافية.</p>
-            <a href="https://wa.me/966591995710" class="cta-button">احجز الآن</a>
+            <p>نستقبل استفساراتكم على مدار الساعة، ونسعد بخدمتكم وإنجاز معاملاتكم بكل احترافية. 📞</p>
+            <a href="https://wa.me/966591995710" class="cta-button">احجز الآن 📞</a>
         </div>
-        <img src="https://drive.google.com/uc?export=view&id=1-h0iHLmJ5OT47LPHiPgazScAz10tpWK-" alt="صورة التواصل">
+        <img src="contact_image.jpg" alt="صورة التواصل">
     </section>
 
     <footer>
